--- a/10일차/실습.html
+++ b/10일차/실습.html
@@ -197,7 +197,7 @@
                 e.target.parentNode.classList.toggle('active');
             }
 
-            console.log(e.target.parentNode);
+            // console.log(e.target.parentNode);
             // =>클릭한 타겟의 부모를 선택해줌
         }
         sectionEl.addEventListener ('click', toggleHandler);
