--- a/7일차/문제.html
+++ b/7일차/문제.html
@@ -42,7 +42,7 @@
         //     },
         //     d = {
         //         userId: 3,
-        //         userName: "민주",
+        //         userName: "",
         //         userImail:"mj@naver.com",
         //         userFrofile:"mj.jpg"
         //     }
