--- a/평가/연습prompt.html
+++ b/평가/연습prompt.html
@@ -244,11 +244,11 @@ const userList = [
 
         const newUser = {
             id: userList.length,
-            profileImg: profileImg || '', 
-            name: name || 'Anonymous', 
-            feedImg: feedImg || '',
+            profileImg: profileImg , 
+            name: name , 
+            feedImg: feedImg ,
             like: 0,
-            subText: subText || ''
+            subText: subText
         };
 
         userList.push(newUser);
